<resources>
    <string name="app_name">ASFAndroid</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- names for side bar -->
    <string name="afs_status">AFS Status</string>
    <string name="command">Command</string>
    <string name="asf_setting">ASF Global Setting</string>
    <string name="app_setting">App Setting</string>
    <string name="about_app">About this app</string>
    <string name="button_exe">execute</string>
    <string name="remaining_text_words">Time Remaining\n %1$s</string>
    <string name="asf_url">ASF Server Url</string>
    <string name="remaining_game_text">Game Remaining\n %1$d</string>
    <string name="card_left_text">Card Remaining\n  %1$d</string>
    <string name="online_text">Online</string>
    <string name="pause_text">Paused</string>
    <string name="offline_text">Offline</string>
    <string name="disable_text">Disabled</string>
    <string name="farm_complete_text">Farm Complete!</string>
    <string name="Farming_text">Farming … Time left : %1$s</string>
    <string name="overview_bot_status_text">Bots: %1$d Online, %2$d Paused, %3$d Offline, %4$d Disabled</string>
    <string name="start_pause">Start/Pause</string>
    <string name="exist_text">Delete</string>
    <string name="loading_text">loading…</string>
    <string name="edit_bot_text">Edit</string>
    <string name="submit_text">submit</string>
    <string name="bot_card_left_text">Card left: %1$d</string>
    <string name="bot_status_words">Bot Status:</string>
    <string name="add_bot_words">Add Bot</string>
    <string name="steam_login_text">Steam Login</string>
    <string name="steam_user_name_text">Steam User name</string>
    <string name="steam_password_text">Steam Password</string>
    <string name="customize_text">Customize</string>
    <string name="performance_text">Performance</string>
    <string name="hoursuntilcarddrops_tex">hours Until Card Drops</string>
    <string name="input_bot_name_here">input bot name here</string>
    <string name="click_to_cancel_text">Click to cancel</string>
    <string name="games_played_while_idle">Games Played While Idle</string>
    <string name="custom_game_played_while_farming">Custom Game Played While Farming</string>
    <string name="custom_game_played_while_idle">Custom Game Played While Idle</string>
    <string name="old_password_won_t_be_shown">old password won\'t be shown</string>
    <string name="update_success_text">Update Success!</string>
    <string name="_3_is_recommanded">3 is recommanded</string>
    <string name="steam_game_id_split_by">steam game id, split by \' , \'</string>
    <string name="farming_cards">e.g. Farming Cards</string>
    <string name="playing_android_studio">e.g. Playing Android Studio</string>

</resources>
